--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "jmucak/wp-optimization-pack",
-  "description": "WP Optimization pack",
+  "name": "jmucak/wp-core-manager-pack",
+  "description": "WP Core Manager pack",
   "require": {
     "php": ">=8.0"
   },
@@ -13,7 +13,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "jmucak\\wpOptimizationPack\\": "src"
+      "jmucak\\wpCoreManagerPack\\": "src"
     }
   }
 }
